# z4001-debug-monitor

./: autoclean.bat  sdkconfig  sdkconfig.old
esp32/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
esp32/main/: main.cpp
esp32/main/apps/: z_app_aisle.cpp  z_app_aisle.hpp  z_app_center.cpp  z_app_center.hpp  z_app_webserver.cpp  z_app_webserver.hpp
esp32/main/comm/: z_comm_base64.hpp  z_comm_check.cpp  z_comm_check.hpp
esp32/main/drivers/: z_driver.hpp  z_drv_rgbled.cpp  z_drv_tmp112a.cpp
esp32/main/hals/base/: z_halbase_gpio.hpp  z_halbase_i2c.hpp  z_halbase_led.hpp
esp32/main/hals/src/: z_hal_gpio.hpp  z_hal_pwm.hpp  z_hal_sdmmc.hpp  z_hal_uart.hpp
esp32/main/units/: z_unit_led.cpp  z_unit_led.hpp  z_units.cpp  z_units.hpp
main/: CMakeLists.txt  main.cpp
main/apps/: z_app_webserver.cpp  z_app_webserver.hpp
main/drivers/: z_driver.hpp  z_drv_gt911.cpp  z_drv_gt911.hpp  z_drv_lcd.cpp  z_drv_lcd.hpp  z_drv_lsm6d.cpp  z_drv_lsm6d.hpp  z_drv_mic.cpp  z_drv_mic.hpp  z_drv_rgbled.cpp  z_drv_rgbled.hpp  z_drv_tmp112a.hpp
main/hals/base/: z_halbase_i80ctrl.hpp  z_halbase_pwm.hpp  z_halbase_uart.hpp
main/hals/src/: z_hal.cpp  z_hal_bluetooth.hpp  z_hal_i2c.hpp  z_hal_i80ctrl.hpp  z_hal_pwm.hpp  z_hal_sdmmc.hpp  z_hal_uart.hpp  z_hal_wifi.hpp
main/units/: z_unit_led.cpp  z_unit_led.hpp  z_units.hpp
web_vue/: index.html  package-lock.json  package.json  vite.config.js
web_vue/src/: App.vue  main.js
web_vue/src/assets/css/: default_pcc.css
web_vue/src/components/: HelloWorld.vue  control.vue  information.vue  monitor.vue  overview.vue
(+6 files in other folders)
